--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <!-- Navbar Menu -->
         <nav>
-          <h2>DomKu <i data-feather="pocket"></i></h2>
+          <h2><span>Dom</span>Ku <i data-feather="pocket"></i></h2>
           <ul>
             <input type="button" value="X" />
             <li>
