--- a/index.html
+++ b/index.html
@@ -80,6 +80,30 @@
           </div>
         </div>
         <!-- Info Saldo -->
+        <!-- IMG Slider -->
+        <div class="img-slide">
+          <img
+            class="slider"
+            src="./img/banner-promosi-toko-online-1536x768.jpg"
+            alt=""
+          />
+          <img
+            class="slider"
+            src="./img/pengertian-promosi-online-adalah-manfaat-fungsi-dan-contoh-media-promosi.png"
+            alt=""
+          />
+          <img
+            class="slider"
+            src="./img/banner-promosi-toko-online-1536x768.jpg"
+            alt=""
+          />
+          <img
+            class="slider"
+            src="./img/pengertian-promosi-online-adalah-manfaat-fungsi-dan-contoh-media-promosi.png"
+            alt=""
+          />
+        </div>
+        <!-- IMG Slider -->
       </header>
     </div>
     <script>
