--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
           />
         </div>
         <!-- IMG Slider -->
+        <!-- Footer -->
+        <footer>
+          <h4>Copyrigth By &copy; NaItzz</h4>
+          <p>Made With <span>VS Code</span></p>
+        </footer>
+        <!-- Footer -->
       </header>
     </div>
     <script>
